# finedgeai

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini
app/: app.py  types.py
app/core/: apis.py
app/datapipeline/: apis.py  init_db.py  models.py  pipeline.py  types.py
tests/: conftest.py  runtests.py
tests/core/: test_core_apis.py  test_core_types.py
tests/datapipeline/: test_dp_apis.py  test_dp_types.py  test_models.py  test_pipeline.py
